--- a/app/views/activities/index.html.slim
+++ b/app/views/activities/index.html.slim
@@ -1,5 +1,7 @@
 = render 'events/menu', event: @parent
 
+- breadcrumb :activities, @parent
+
 .ui.segment
   table.ui.very.basic.large.celled.padded.table
     thead
