--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,7 +1,4 @@
 - breadcrumb :events
 
-/ .ui.segment
-/   = render 'table', events: @events
-
 .events
-  = render 'card', events: @events
+  = render 'cards', events: @events
