Adds excel export for activities.

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -33,3 +33,7 @@ input, select, textarea {
     background: $knowit-complementary-blue-color !important;
   }
 }
+
+span.translation_missing {
+  color: $knowit-complementary-red-color;
+}
