Adds data migration, passport model, moves user passport data to passport, minor ui fixes

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.ui, input, select, textarea {
+.ui:not(.label), input, select, textarea {
   border-radius: 0px !important;
 }
 
