--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -27,7 +27,5 @@ table.ui.very.basic.table
 
         td
           - if can? :manage, participation
-            div.ui.mini.buttons
-              = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui primary button"
-              div.or
-              = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+            = link_to fa_icon('pencil lg'), edit_event_participation_path(@event, participation)
+            =< link_to fa_icon('trash lg'), event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete
