--- a/app/views/shared/_crud_title.slim
+++ b/app/views/shared/_crud_title.slim
@@ -3,6 +3,8 @@ h1.title
   - case action_name.to_sym
   - when :index
     = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2))
+    span.count
+      span= crudable.count
   - when :show
     = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 1), record: crudable.to_s)
   - else
