Check if images on activity is nil for rendering image or not. Removed show in activities_controller

--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -3,8 +3,9 @@
 - breadcrumb :activities, @event
 .ui.items
   .item
-    .image
-      = image_tag @activity.images.last.file.url, width: 200
+    - if @activity.images.nil?
+      .image
+        = image_tag @activity.images.last.file.url, width: 200
     .content
       .header
         = @activity.title
