--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -33,7 +33,8 @@ html, body {
 
   #frontpage-top {
     // background-image: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.6)), url(asset-path('mallorca.jpg'));
-    background: $knowit-primary-green-color-lightest;
+    background: asset-url('pyrenees.jpg');
+    background-size: 100%;
     height: 100%;
     margin-top: 76px;
     h1 {
