--- a/app/views/layouts/_menu.slim
+++ b/app/views/layouts/_menu.slim
@@ -11,7 +11,7 @@
     .right.menu
     - if current_user
       - if currently_impersonating?
-        = link_to t('menu.currently_impersonating'), stop_impersonating_users_path, method: :post, class: 'item'
+        = link_to t('menu.currently_impersonating', first_name: current_user.first_name, last_name: current_user.last_name), stop_impersonating_users_path, method: :post, class: 'item'
       = link_to t('menu.edit_profile'), edit_user_path(current_user), class: 'item'
       = link_to t('menu.sign_out'), signout_path, method: :delete, class: 'item'
 
