Sudden realization that the locking solution is overengineered. Standarize to lock id for event for now.

--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -34,3 +34,5 @@
 
   - unless @activity.participations.empty?
     == render 'participations/tiny_table', participations: @activity.participations
+
+= render 'shared/lock_buttons', lockable: @activity
