--- a/app/views/locks/edit.html.slim
+++ b/app/views/locks/edit.html.slim
@@ -1,10 +1,7 @@
 .ui.segment
   = simple_form_for @lock do |f|
-    .two.fields
-      .field = f.input :field,
-        collection: @lock.lockable.attributes.keys.reject{ |e| e.to_sym.in?(%i(id created_at updated_at)) },
-        input_html: { class: 'ui dropdown selection' },
-        label_method: lambda { |v| t(".#{v}") }
+    .one.fields
+      = f.input :field, as: 'hidden', input_html: { value: 'id' }
       .field: .ui.calendar = f.input :locked_at, as: :string
 
     .actions
