--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -14,3 +14,4 @@
     = link_to "Add participant", new_event_participation_path(@event), class: 'ui button secondary'
     = link_to "Deltakere med enkeltrom", single_room_participants_event_participations_path(@event), class: 'ui button primary'
     = link_to "Deltakere med allergier", event_allergies_path(@event), class: 'ui button primary'
+    = render 'shared/lock_buttons', lockable: @event
