--- a/app/views/users/_fields.slim
+++ b/app/views/users/_fields.slim
@@ -5,7 +5,7 @@
     .ui.calendar
       = f.input :birth_date, as: :string, required: @user.persisted?
 
-= f.fields_for :passport  do |g|
+= f.fields_for :passport, @user.passport do |g|
   = render 'passports/fields', f: g, required: false
 
 .inline.fields
