Fixes dates in passports, adds english as default locale

--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -142,6 +142,7 @@ html, body {
 .intro-flex {
   .ui.card {
     box-shadow: 0 0 300px $knowit-primary-purple-color-lighter;
-    width: 330px;
+    width: 350px;
+    height: 400px;
   }
 }
