--- a/app/views/locks/index.html.slim
+++ b/app/views/locks/index.html.slim
@@ -6,7 +6,7 @@
         th = Lock.human_attribute_name(:lockable_id)
         th = Lock.human_attribute_name(:locked_at)
         - if can? :manage, Lock
-          th = t('.actions')
+          th = t('shared.table.actions')
 
       = render @locks
 
