--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -2,7 +2,8 @@
 
 - breadcrumb :event, @event
 
-= @event.description
+p = @event.event_type
+p = @event.description
 
 .ui.segment
   h2 Participants
