--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -2,28 +2,30 @@ table.ui.very.basic.table
   thead
     tr
       th = User.human_attribute_name(:name)
-      - if current_user.admin?
-        th = Participation.human_attribute_name(:single_room)
-        th = Participation.human_attribute_name(:request_for_sharing_room)
-      th = Participation.human_attribute_name(:extended_stay)
-      th = Participation.human_attribute_name(:extended_stay_from)
-      th = Participation.human_attribute_name(:extended_stay_to)
-      th = Activity.model_name.human(count: 2)
+      - if @event.event_type == 'conference'
+        - if current_user.admin?
+          th = Participation.human_attribute_name(:single_room)
+          th = Participation.human_attribute_name(:request_for_sharing_room)
+        th = Participation.human_attribute_name(:extended_stay)
+        th = Participation.human_attribute_name(:extended_stay_from)
+        th = Participation.human_attribute_name(:extended_stay_to)
+        th = Activity.model_name.human(count: 2)
       th = t('shared.table.actions')
 
   tbody
     - participations.each do |participation|
       tr
         td = maybe participation.user.full_name
-        - if current_user.admin?
-          td = yesno_icon participation.single_room
-          td = maybe participation.request_for_sharing_room
-        td = yesno_icon participation.extended_stay
-        td = maybe participation.extended_stay_from
-        td = maybe participation.extended_stay_to
-        td
-          - participation.activities.each do |activity|
-            div = activity.title
+        - if @event.event_type == 'conference'
+          - if current_user.admin?
+            td = yesno_icon participation.single_room
+            td = maybe participation.request_for_sharing_room
+          td = yesno_icon participation.extended_stay
+          td = maybe participation.extended_stay_from
+          td = maybe participation.extended_stay_to
+          td
+            - participation.activities.each do |activity|
+              div = activity.title
 
         td
           - if can? :manage, participation
