--- a/app/views/hotels/edit.slim
+++ b/app/views/hotels/edit.slim
@@ -1,2 +1,6 @@
-= render 'form'
-= render 'shared/image_upload/upload_fields', owner: @hotel
+= render 'events/menu', event: @parent
+- breadcrumb :event_activities, @hotel, @parent
+
+.ui.segment
+  = render 'form'
+  = render 'shared/image_upload/upload_fields', owner: @hotel
