--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -9,7 +9,8 @@ table.ui.very.basic.table
       th = Participation.human_attribute_name(:extended_stay_from)
       th = Participation.human_attribute_name(:extended_stay_to)
       th = Activity.model_name.human(count: 2)
-      th = t('shared.table.actions')
+      - if can?(:manage, Participation)
+        th = t('shared.table.actions')
 
   tbody
     - participations.each do |participation|
@@ -25,7 +26,8 @@ table.ui.very.basic.table
           - participation.activities.each do |activity|
             div = activity.title
 
-        td
-          - if can? :manage, participation
-            = link_to fa_icon('pencil lg'), edit_event_participation_path(@event, participation)
-            =< link_to fa_icon('trash lg'), event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete
+        - if can?(:manage, Participation)
+          td
+            - if can? :manage, participation
+              = link_to fa_icon('pencil lg'), edit_event_participation_path(@event, participation)
+              =< link_to fa_icon('trash lg'), event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete
