--- a/app/views/participations/index.html.slim
+++ b/app/views/participations/index.html.slim
@@ -4,3 +4,11 @@
 
 .ui.segment
   = render 'table', participations: @participations
+
+- if can? :manage, @event
+  = link_to "Add participant", new_event_participation_path(@event), class: 'ui button secondary'
+  - if current_user.admin?
+    = link_to t('shared.buttons.download_xlsx'), event_participations_path(@event, format: :xlsx), class: 'ui button primary'
+  = link_to "Deltakere med enkeltrom", single_room_participants_event_participations_path(@event), class: 'ui button primary'
+  = link_to "Deltakere med allergier", event_allergies_path(@event), class: 'ui button primary'
+  = render 'shared/lock_buttons', lockable: @event
