--- a/app/views/program/_program.slim
+++ b/app/views/program/_program.slim
@@ -1,7 +1,4 @@
+h1.header Program
 
 .ui.segment
-  .ui.header
-    h1 Program
-  
-  .ui.segment
-    = render 'program/program_per_day'
+  = render 'program/program_per_day'
