--- a/app/views/layouts/crudable.slim
+++ b/app/views/layouts/crudable.slim
@@ -2,11 +2,8 @@
 
   = raw(breadcrumbs separator: fa_icon('angle-right lg'))
 
-  = render 'shared/crud_title'
+  = render 'shared/crud_header', parent: @parent, resource: crudable
 
-  - if content_for? :auxiliary_menu
-    #auxiliary-menu
-      = yield :auxiliary_menu
 
   = yield
 
