--- a/app/views/program/_program_per_day.slim
+++ b/app/views/program/_program_per_day.slim
@@ -1,37 +1,31 @@
-
-.ui.header
-  h2 Monday
-  
-h3 09:00
-.ui.section.divider
-  
-.ui.link.relaxed.items
-  .ui.item
-    .ui.tiny.image
-        = image_tag 'placeholder.png'
-    .content
-      .ui.header
-        h4 Tittel på talken
-      .extra
-        .ui.labels
-          .ui.label Presentation
-          .ui.label 
-            i.clock.icon
-            45min
-          .ui.label 
-            i.user.icon
-            Dummy
-  .ui.item
-    .ui.tiny.image
-      = image_tag 'placeholder.png'
-    .ui.content
-      .ui.header
-        h4 Tittel på talk 2
-      .ui.extra
-        .ui.labels
-          .ui.label Presentation
-          .ui.label 
-            i.clock.icon
-            45min
-h3 10:00
-.ui.section.divider
+- @event.dates.each do |date|
+  .ui.medium.horizontal.divider.header
+    = date.strftime('%A %B %e, %Y')
+  .ui.relaxed.items
+    - @event.event_sessions.by_date(date).order(:start_time).each do |session|
+      .ui.item
+        / .ui.tiny.image
+        /   = image_tag 'placeholder.png'
+        .content
+          .header
+            / = session.start_time.strftime('%H:%m') 
+            / |&ndash;
+            / = session.end_time.strftime('%H:%m')
+            / |&nbsp;
+            =< session.title
+          .extra
+            = session.outline
+            br
+            br
+            .ui.very.basic.tiny.label
+              = session.session_type.upcase
+            .ui.very.basic.tiny.label 
+              i.map.icon
+              =<> session.track&.venue&.name
+            .ui.very.very.basic.tiny.label 
+              i.user.icon
+              =<> session.submitter.full_name
+            .ui.very.basic.tiny.label 
+              i.clock.icon
+              =<> session.duration
+              |  min
